--- a/index.html
+++ b/index.html
@@ -33,14 +33,23 @@
 
   <!-- ================= HERO ================= -->
   <section class="hero container">
-    <h1>Your Name</h1>
-    <h2>JavaScript Developer</h2>
-    <p>Building clean, interactive and scalable web experiences.</p>
+  <div class="hero-content">
+    <p class="hero-badge">Available for opportunities</p>
+    <h1>
+      Building scalable <span class="gradient-text">JavaScript products</span> 
+      with clean architecture.
+    </h1>
+    <p class="hero-sub">
+      I design and develop performant web applications focused on 
+      usability, clarity and long-term maintainability.
+    </p>
+
     <div class="hero-cta">
-      <a href="#projects" class="btn primary">View Projects</a>
-      <a href="#contact" class="btn secondary">Contact Me</a>
+      <a href="#projects" class="btn primary">View Work</a>
+      <a href="#contact" class="btn secondary">Let’s Talk</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- ================= ABOUT ================= -->
   <section id="about" class="section container">
@@ -156,4 +165,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
