--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <div class="bg-glow"></div>
   <!-- ================= NAVBAR ================= -->
   <header class="header">
     <nav class="nav container">
@@ -167,3 +167,4 @@
 </body>
 
 </html>
+
